--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ListaElementos">
         <activity
+            android:name=".AgregarContactoActivity"
+            android:exported="false" />
+        <activity
             android:name=".DetalleActivity"
             android:exported="true" />
         <activity
